@@ -1,4 +1,4 @@
-# $Id: sfcb.cfg.pre.in,v 1.29 2011/11/23 03:24:00 mchasal Exp $
+# $Id: sfcb.cfg.pre.in,v 1.30 2012/02/04 01:03:31 mchasal Exp $
 ##
 ## Sample Configuration for Small Footprint CIM Broker
 ## 
@@ -264,6 +264,8 @@ sslCiphers: ALL:!ADH:!LOW:!EXP:!MD5:@STRENGTH
 ## Number of retry attempts before giving up
 ## Default is 3 attempts (not including initial attempt)
 ## A value of 0 disables reliable indications
+## including indication sequence numbers and subscription 
+## removal.
 #DeliveryRetryAttempts: 3
 
 ## The length of time an destination can fail before the subscription
