@@ -8,6 +8,7 @@ New features:
 - 3435778 Preserve leading/trailing whitespace in values
 - 3433733 CreationClassNames should be supplied
 - 3446179 Add a feature to validate CMPI types
+- 3484025 Disable indication sequencing
 
 Bugs fixed: 
 
