@@ -1,3 +1,8 @@
+2012-02-03 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* interopProvider.c, indCIMXMLHandler.c, sfcb.cfg.pre.in
+	[ 3484025 ] Disable indication sequencing
+
 2012-02-03  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* profileProvider.c, providerMgr.c, default.reg.in, configure.ac, 
